apps/media-downloaders/prowlarr/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media-downloaders
spec:
  serviceName: prowlarr
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr
          ports:
            - name: "http"
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
            - name: prowlarr-media
              mountPath: /data
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
