apps/media-downloaders/prowlarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-downloaders
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 9696
      port: 80
