apps/media-downloaders/prowlarr/resources/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media-downloaders
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/description: "Torrent Indexer"
    gethomepage.dev/group: "Media Downloaders"
    gethomepage.dev/icon: "prowlarr"
spec:
  rules:
    - host: prowlarr.home.mees-olivier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
  tls:
    - secretName: prowlarr-tls
      hosts:
        - prowlarr.home.mees-olivier.com
